Work on the presentation.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ class: title-slide, center, bottom
   &lt;img src="img/sn_logo.png" alt="Logo of Sentinel North. Shows a stars in the middle." width = "450"/&gt;
 &lt;/figure&gt;
 
-May 19, 2022 (updated: 2022-05-04)
+May 19, 2022 (updated: 2022-05-09)
 
 ## Philippe Massicotte
 
@@ -746,6 +746,8 @@ penguins
 ```
 &lt;/small&gt;
 
+**Note that the `ggplot2` works best when using data frames.**
+
 ---
 
 # Understanding the ggplot2 syntax
@@ -753,7 +755,7 @@ penguins
 A `ggplot2` plot is built layer by layer by using the `+` operator. 
 
 &lt;center&gt;
-    &lt;img src="img/ggplot2_structure.png" alt="drawing" width="800"/&gt;
+    &lt;img src="img/ggplot2_structure.png" alt="drawing" width="1000"/&gt;
 &lt;/center&gt;
 &lt;figcaption&gt;
     The basic structure of a ggplot2 plot.
