Work on the presentation.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ class: title-slide, center, bottom
   &lt;img src="img/sn_logo.png" alt="Logo of Sentinel North. Shows a stars in the middle." width = "450"/&gt;
 &lt;/figure&gt;
 
-May 19, 2022 (updated: 2022-05-09)
+May 19, 2022 (updated: 2022-05-12)
 
 ## Philippe Massicotte
 
@@ -151,6 +151,16 @@ class: middle, center, inverse
 
 ---
 
+# Datasaurus Dozen
+
+&lt;img src="index_files/figure-html/unnamed-chunk-1-1.svg" style="display: block; margin: auto;" /&gt;
+
+--
+
+**These 13 datasets have the same statistical properties (*mean*, *variance*, *correlation*).** However, they look quite different!
+
+---
+
 # Visualization to convey your message
 
 It can be difficult to grasp the information contained in a table.
@@ -225,7 +235,7 @@ It can be difficult to grasp the information contained in a table.
 
 Graphics, on the other hand, can help to convey your message.
 
-&lt;img src="index_files/figure-html/unnamed-chunk-2-1.svg" width="70%" style="display: block; margin: auto;" /&gt;
+&lt;img src="index_files/figure-html/unnamed-chunk-3-1.svg" width="70%" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -233,7 +243,7 @@ Graphics, on the other hand, can help to convey your message.
 
 The same data but presented differently.
 
-&lt;img src="index_files/figure-html/unnamed-chunk-3-1.svg" style="display: block; margin: auto;" /&gt;
+&lt;img src="index_files/figure-html/unnamed-chunk-4-1.svg" style="display: block; margin: auto;" /&gt;
 
 Interesting reading: [Arctic Sea Ice Extent Second Highest in 18 Years at the end of 2021](https://www.severe-weather.eu/global-weather/arctic-sea-ice-second-highest-18-years-end-2021-rrc/)
 
@@ -241,17 +251,9 @@ Interesting reading: [Arctic Sea Ice Extent Second Highest in 18 Years at the en
 
 # Visualization to convey your message
 
+The same data but presented differently.
+
 &lt;img src="index_files/figure-html/sie-rect-plot-1.svg" style="display: block; margin: auto;" /&gt;
-
----
-
-# Datasaurus Dozen
-
-&lt;img src="index_files/figure-html/unnamed-chunk-4-1.svg" style="display: block; margin: auto;" /&gt;
-
---
-
-**These 13 datasets have the same statistical properties (*mean*, *variance*, *correlation*).** However, they look quite different!
 
 ---
 
@@ -410,7 +412,7 @@ Although we can see the different types of cycles better, the graph looks too st
 
 # Truncated graphs
 
-- Truncated graphs can be very misleading because the *y-axis* does not start at 0.
+- Truncated graphs (**especially barplot**) can be very misleading because the *y-axis* does not start at 0.
 
 - The graph in **panel A** suggests that Olivier's salary  **is 10 times more** than Benjamin's.
 
