Add web links for color ressources.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ class: title-slide, center, bottom
   &lt;img src="img/sn_logo.png" alt="Logo of Sentinel North. Shows a stars in the middle." width = "450"/&gt;
 &lt;/figure&gt;
 
-May 19, 2022 (updated: 2022-05-17)
+May 19, 2022 (updated: 2022-05-19)
 
 ## Philippe Massicotte
 
@@ -1555,6 +1555,22 @@ ggplot(
     "Gentoo" = "#008b8b"
   ))
 ```
+
+---
+
+# Setting color manually
+
+Some color resources to procrastinate on!
+
+- [The super fast color palettes generator!](https://coolors.co/)
+
+- [ColorSpace](https://mycolor.space/)
+
+- [Gradient Generator](https://colordesigner.io/gradient-generator)
+
+- [Color Palettes Color Schemes](https://www.color-hex.com/color-palettes/)
+
+- [Color Hunt](https://colorhunt.co/)
 
 ---
 
