--- a/index.html
+++ b/index.html
@@ -2997,6 +2997,25 @@ p +
 &lt;img src="index_files/figure-html/legend_position_auto_04_output-1.svg" style="display: block; margin: auto;" /&gt;
 ]
 
+---
+count: false
+ 
+# Legend position
+.panel1-legend_position-auto[
+
+```r
+p +
+  theme(legend.position = "top") +
+  theme(legend.position = "left") +
+  theme(legend.position = "bottom") +
+* theme(legend.position = c(0.5, 0.5))
+```
+]
+ 
+.panel2-legend_position-auto[
+&lt;img src="index_files/figure-html/legend_position_auto_05_output-1.svg" style="display: block; margin: auto;" /&gt;
+]
+
 &lt;style&gt;
 .panel1-legend_position-auto {
   color: black;
